--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: survcompare
-Title: Internally validates and compares performance of the Cox Proportionate Hazards and Survival Random Forest
+Title: Compares predictive performance of the Cox Proportionate Hazards and Survival Random Forest models to quantify interpretability-accuracy trade off
 Version: 0.0.9
+Date: 2023-10-19
 Authors@R: c(
       person("Diana", "Shamsutdinova", , "diana.shamsutdinova@kcl.ac.uk", role = c("aut", "cre"), 
              comment = c(ORCID = "YOUR-ORCID-ID")),
-      person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut", "cre"), 
+      person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
              comment = c(ORCID = "YOUR-ORCID-ID"))
              )
-Description:  The package performs repeated nested cross-validation for a given survival data for Cox PH, Cox Lasso, and Survival Random Forest. The outcome includes internally validated concordance index, time-dependent AUC, Brier score and calibration slope, and statistical testing results for the over-performance of SRF over the Cox PH and Cox Lasso. The package will help researchers analysing time-to-event data to quantify the gain of opting to a more complex model, or justify their redundancy. Equally, it will show the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
+Description:  The package performs repeated nested cross-validation for a given survival data for Cox PH, Cox Lasso, Survival Random Forest (SRF), and ensemble of Cox and SRF. The outcome includes internally validated concordance index, time-dependent AUC, Brier score and calibration slope, and statistical testing results for the over-performance of SRF over the Cox PH and Cox Lasso. The package will help researchers analysing time-to-event data to quantify the gain of opting to a more complex model, or justify their redundancy. Equally, it will show the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
