--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,3 +17,17 @@ export(survcox_train)
 export(survensemble1)
 export(survensemble1cv)
 export(survval)
+importFrom(foreach,foreach)
+importFrom(mfp,fp)
+importFrom(pec,ipcw)
+importFrom(randomForestSRC,rfsrc)
+importFrom(rpart.plot,rpart.plot)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(survival,Surv)
+importFrom(survival,coxph)
+importFrom(timeROC,timeROC)
