no errors state

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,21 +2,21 @@
 
 S3method(predict,survensemble)
 S3method(print,survensemble)
-S3method(print,survensembleCV)
+S3method(print,survensemble_cv)
 S3method(summary,survensemble)
-S3method(summary,survensembleCV)
-export(bs_surv)
+S3method(summary,survensemble_cv)
 export(cox_calibration_stats)
 export(simsurv_crossterms)
-export(simsurv_lin_nonPH)
 export(simsurv_linear)
 export(simsurv_nonlinear)
+export(surv_validate)
 export(survcompare)
 export(survcox_cv)
 export(survcox_train)
-export(survensemble)
-export(survensembleCV)
-export(survval)
+export(survensemble_cv)
+export(survensemble_train)
+export(survsrf_cv)
+export(survsrf_train)
 importFrom(foreach,foreach)
 importFrom(pec,ipcw)
 importFrom(randomForestSRC,rfsrc)
