--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ S3method(summary,survcompare)
 S3method(summary,survensemble)
 S3method(summary,survensemble_cv)
 export(cox_calibration_stats)
-export(simsurv_crossterms)
-export(simsurv_linear)
-export(simsurv_nonlinear)
+export(simulate_crossterms)
+export(simulate_linear)
+export(simulate_nonlinear)
 export(surv_validate)
 export(survcompare)
 export(survcox_cv)
