second_vignette add

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(simulate_nonlinear)
 export(surv_validate)
 export(survcompare)
 export(survcox_cv)
+export(survcox_predict)
 export(survcox_train)
+export(survcoxlasso_train)
 export(survensemble_cv)
 export(survensemble_train)
 export(survsrf_cv)
