--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(survcoxlasso_train)
 export(survensemble_cv)
 export(survensemble_train)
 export(survsrf_cv)
+export(survsrf_predict)
 export(survsrf_train)
 importFrom(foreach,foreach)
 importFrom(pec,ipcw)
