--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Version: 0.1.0
 Date: 2023-10-19
 Authors@R: c(
       person("Diana", "Shamsutdinova", , "diana.shamsutdinova@kcl.ac.uk", role = c("aut", "cre"), 
-             comment = c(ORCID = "YOUR-ORCID-ID")),
+             comment = c(ORCID = "0000-0003-2434-3641")),
       person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
-             comment = c(ORCID = "YOUR-ORCID-ID"))
+             comment = c(ORCID = "0000-0001-7987-6619"))
              )
 Description: The package performs repeated nested cross-validation for a given survival data for Cox PH, Cox Lasso, Survival Random Forest (SRF), and ensemble of Cox and SRF. The outcome includes internally validated concordance index, time-dependent AUC, Brier score and calibration slope, and statistical testing results for the over-performance of SRF over the Cox PH and Cox Lasso. The package will help researchers analysing time-to-event data to quantify the gain of opting to a more complex model, or justify their redundancy. Equally, it will show the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
 License: GPL (>= 3) + file LICENSE
@@ -21,6 +21,7 @@ Imports:
   caret,
   glmnet,
   randomForestSRC,
+  pec,
   foreach
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
