--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: survcompare
-Title: Comparing linear (Cox-PH) and non-linear (Survival Random Forest) survival models to quantify predictive value of non-linear and interaction terms in the data
+Title: Comparing Linear (Cox-PH) and Non-Linear (Survival Random Forest) Survival Models to Quantify Predictive Value of Non-Linear and Interaction Terms in the Data
 Version: 0.1.0
 Date: 2023-10-19
 Authors@R: c(
-      person("Diana", "Shamsutdinova", , "diana.shamsutdinova@kcl.ac.uk", role = c("aut", "cre"), 
+      person("Diana", "Shamsutdinova", , "diana.shamsutdinova@gmail.com", role = c("aut", "cre"), 
              comment = c(ORCID = "0000-0003-2434-3641")),
       person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
              comment = c(ORCID = "0000-0001-7987-6619"))
              )
 Description: The package performs repeated nested cross-validation for a given survival data for Cox PH, Cox Lasso, Survival Random Forest (SRF), and ensemble of Cox and SRF. The outcome includes internally validated concordance index, time-dependent AUC, Brier score and calibration slope, and statistical testing results for the over-performance of SRF over the Cox PH and Cox Lasso. The package will help researchers analysing time-to-event data to quantify the gain of opting to a more complex model, or justify their redundancy. Equally, it will show the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
-License: GPL (>= 3) + file LICENSE
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 Depends: 
