--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Comparing Linear (Cox-PH) and Non-Linear (Survival Random Forest) Surviva
 Version: 0.1.0
 Date: 2023-10-19
 Authors@R: c(
-      person("Diana", "Shamsutdinova", , "diana.shamsutdinova@gmail.com", role = c("aut", "cre"), 
+      person("Diana", "Shamsutdinova", , "diana.shamsutdinova.github@gmail.com", role = c("aut", "cre"), 
              comment = c(ORCID = "0000-0003-2434-3641")),
       person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
              comment = c(ORCID = "0000-0001-7987-6619"))
