--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,7 @@ Imports:
   timeROC,
   caret,
   glmnet,
-  randomForestSRC,
-  pec
+  randomForestSRC
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Suggests: 
