--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: survcompare
-Title: Comparing Linear (Cox-PH) and Non-Linear (Survival Random Forest) Survival Models to Quantify Predictive Value of Non-Linear and Interaction Terms in the Data
+Title: Compares Cox and Survival Random Forests to quantify nonlinearity
 Version: 0.1.0
 Date: 2023-10-19
 Authors@R: c(
@@ -8,7 +8,7 @@ Authors@R: c(
       person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
              comment = c(ORCID = "0000-0001-7987-6619"))
              )
-Description: Repeated nested cross-validation for Cox Proportionate Hazards, Cox Lasso, Survival Random Forest models, and their ensemble. The outcome includes internally validated concordance index, time-dependent area under the curve, Brier score and calibration slopes, and the results of statistical testing of non-linear ensemble outperforming the baseline Cox model. The package helps researchers to quantify the gain of using a more complex survival model, or justify its redundancy. Equally, it will show the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
+Description: Performs repeated nested cross-validation for Cox Proportionate Hazards, Cox Lasso, Survival Random Forest, and their ensemble. Returns internally validated concordance index, time-dependent area under the curve, Brier score, calibration slope, and statistical testing of non-linear ensemble outperforming the baseline Cox model. In this, it helps researchers to quantify the gain of using a more complex survival model, or justify its redundancy. Equally, it shows the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
