--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: survcompare
 Title: Compares Cox and Survival Random Forests to quantify nonlinearity
-Version: 0.1.0
+Version: 0.1.1
 Date: 2023-10-19
 Authors@R: c(
       person("Diana", "Shamsutdinova", , "diana.shamsutdinova.github@gmail.com", role = c("aut", "cre"), 
@@ -8,7 +8,8 @@ Authors@R: c(
       person("Daniel", "Stahl", , "daniel.r.stahl@kcl.ac.uk", role = c("aut"), 
              comment = c(ORCID = "0000-0001-7987-6619"))
              )
-Description: Performs repeated nested cross-validation for Cox Proportionate Hazards, Cox Lasso, Survival Random Forest, and their ensemble. Returns internally validated concordance index, time-dependent area under the curve, Brier score, calibration slope, and statistical testing of non-linear ensemble outperforming the baseline Cox model. In this, it helps researchers to quantify the gain of using a more complex survival model, or justify its redundancy. Equally, it shows the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation.
+Description: Performs repeated nested cross-validation for Cox Proportionate Hazards, Cox Lasso, Survival Random Forest, and their ensemble. Returns internally validated concordance index, time-dependent area under the curve, Brier score, calibration slope, and statistical testing of non-linear ensemble outperforming the baseline Cox model. In this, it helps researchers to quantify the gain of using a more complex survival model, or justify its redundancy. Equally, it shows the performance value of the non-linear and interaction terms, and may highlight the need of further feature transformation. 
+Further details can be found in Shamsutdinova, Stamate, Roberts, & Stahl (2022) "Combining Cox Model and Tree-Based Algorithms to Boost Performance and Preserve Interpretability for Health Outcomes" <https://doi.org/10.1007/978-3-031-08337-2_15>, where the method is described as Ensemble 1.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
@@ -28,4 +29,5 @@ Suggests:
     rmarkdown,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Maintainer: Diana Shamsutdinova <diana.shamsutdinova.github@gmail.com>
 Config/testthat/edition: 3
