--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: survcompare
-Title: Compares Cox and Survival Random Forests to quantify nonlinearity
+Title: Compares Cox and Survival Random Forests to Quantify Nonlinearity
 Version: 0.1.1
 Date: 2023-10-19
 Authors@R: c(
