--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,9 @@
 
 S3method(print,survcompare)
 S3method(print,survensemble_cv)
+S3method(summary,survcompare)
 S3method(summary,survensemble_cv)
-export(ml_hyperparams_deephit)
+export(ml_hyperparams_srf)
 export(simulate_crossterms)
 export(simulate_linear)
 export(simulate_nonlinear)
@@ -14,17 +15,6 @@ export(survcox_cv)
 export(survcox_predict)
 export(survcox_train)
 export(survcoxlasso_train)
-export(survdeephit_cv)
-export(survdeephit_predict)
-export(survdeephit_train)
-export(survdeephit_tune)
-export(survdeephit_tune_single)
-export(survdhens_cv)
-export(survdhens_predict)
-export(survdhens_train)
-export(survdhstack_cv)
-export(survdhstack_predict)
-export(survdhstack_train)
 export(survsrf_cv)
 export(survsrf_predict)
 export(survsrf_train)
@@ -35,9 +25,11 @@ export(survsrfstack_cv)
 export(survsrfstack_predict)
 export(survsrfstack_train)
 importFrom(randomForestSRC,rfsrc)
+importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,median)
 importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,quantile)
