--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,survcompare)
 S3method(print,survensemble_cv)
 S3method(summary,survcompare)
 S3method(summary,survensemble_cv)
+export(ml_hyperparams_deephit)
 export(ml_hyperparams_srf)
 export(simulate_crossterms)
 export(simulate_linear)
@@ -15,6 +16,17 @@ export(survcox_cv)
 export(survcox_predict)
 export(survcox_train)
 export(survcoxlasso_train)
+export(survdeephit_cv)
+export(survdeephit_predict)
+export(survdeephit_train)
+export(survdeephit_tune)
+export(survdeephit_tune_single)
+export(survdhens_cv)
+export(survdhens_predict)
+export(survdhens_train)
+export(survdhstack_cv)
+export(survdhstack_predict)
+export(survdhstack_train)
 export(survsrf_cv)
 export(survsrf_predict)
 export(survsrf_train)
