--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,13 @@ export(survsrfens_train)
 export(survsrfstack_cv)
 export(survsrfstack_predict)
 export(survsrfstack_train)
+importFrom(devtools,load_all)
+importFrom(doParallel,registerDoParallel)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
+importFrom(parallel,detectCores)
 importFrom(randomForestSRC,rfsrc)
+importFrom(reticulate,use_python)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
@@ -49,4 +55,5 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
+importFrom(survivalmodels,deephit)
 importFrom(timeROC,timeROC)
