--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(devtools,load_all)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(parallel,clusterEvalQ)
 importFrom(parallel,detectCores)
 importFrom(randomForestSRC,rfsrc)
 importFrom(reticulate,use_python)
