adding missing imputation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,11 +24,14 @@ export(survsrfens_train)
 export(survsrfstack_cv)
 export(survsrfstack_predict)
 export(survsrfstack_train)
+importFrom(missForestPredict,missForest)
+importFrom(missForestPredict,missForestPredict)
 importFrom(randomForestSRC,rfsrc)
 importFrom(stats,approxfun)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,poisson)
 importFrom(stats,predict)
