--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
   timeROC,
   caret,
   glmnet,
-  randomForestSRC
+  randomForestSRC,
+  missForestPredict
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests: 
